added some links into the html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,25 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html>
 <head>
-<title>Home - growth center church</title>
+	<title>Home - GROWTH CENTER CHURCH</title>
+	<meta charset="utf-8">
+	<meta charset="utf-8">
+	<link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
+	<div class="container-fluid">
+		<header>
+			<nav class="navbar">
+				<ul>
+					<li><a href="#">HOME</a></li>
+					<li><a href="#">ABOUT US</a></li>
+					<li><a href="#">MINISTRIES</a></li>
+				</ul>
+				
+			</nav>
+		</header>
+		
+	</div>
 </body>
 </html>
