--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 	<div class="container-fluid">
 		<header>
 			<nav class="navbar">
+				<h1>GROWTH CENTER CHURCH</h1>
 				<ul>
-					<li><a href="#">HOME</a></li>
+					<li><a href="file:///C:/Users/osung/Documents/GitHub/christian-growth-center-church-website/index.html#">HOME</a></li>
 					<li><a href="#">ABOUT US</a></li>
 					<li><a href="#">MINISTRIES</a></li>
 				</ul>
